# minlin

./: .gitignore  LICENSE  README.md
blas/: gemm.cpp  gemm.cu  gemv.cpp  gemv.cu  makefile  utilities.h
cppexamples/: assign.cpp  copying.cpp  dot.cpp  inplace.cpp  logical.cpp  makefile  matmult.cpp  matrix.cpp  mul.cpp  range.cpp  storage.cpp  unary.cpp
cppexamples/qpsolvers/: makefile  string  string.cpp
examples/: assign  binary2.cu  copying.cu  makefile  range.cu  readme.txt  unary.cu
examples_cmake/: CMakeLists.txt
examples_cmake_gpu/: sample_device.cu  sample_host.cpp
examples_cpp/: assign  assign.cpp  assign2.cpp  binary.cpp  binary2.cpp  expression.cpp  index.cpp  makefile  range_check.cpp  submatrix.cpp  vector_matrix.cpp
examples_cu/: assign2.cu  binary.cu  dot.cu  expression.cu  index.cu  inplace.cu  logical.cu  makefile  matrix.cu  mul.cu  rand.cu  range_check.cu  storage.cu  submatrix.cu  vector_matrix.cu
examples_laplace/: CMakeLists.txt  sample_device.cu  sample_host.cpp
examples_qpopt/: CMakeLists.txt  makefile  output_bound_10t.vtk  output_bound_16t.vtk  output_bound_2t.vtk  output_eq_10t.vtk  string  string.cpp  string.cu  string_bound.cpp  string_bound.cu  string_eq.cpp  string_eq.cu
examples_qpopt/include/: savevtk.h
include/generalmatrix/: generalmatrix.h  laplacefullmatrix.h
include/minlin/: doc.txt  matrix.h  matrix_binary_operators.h  matrix_functions.h  matrix_io.h  matrix_logical_operators.h  matrix_n_ary_operators.h  matrix_operators.h  matrix_reduction_operators.h  matrix_relational_operators.h  matrix_unary_operators.h  matrix_vector_operators.h  minlin.h  vector.h  vector_binary_operators.h  vector_functions.h  vector_io.h  vector_logical_operators.h  vector_n_ary_operators.h  vector_operators.h  vector_properties.h  vector_reduction_operators.h  vector_relational_operators.h  vector_unary_operators.h
include/minlin/detail/: assert_conformance.h  assign_dimensions.h  end_and_all.h  forward.h  helpers.h
include/minlin/extra/qpopt/: makefile  qpopt.cpp
include/minlin/extra/qpopt/include/: qpopt.h
include/minlin/modules/threx/: binary_operators.h  blas.h  device_matrix.h  device_vector.h  functions.h  host_matrix.h  host_vector.h  indexing_operators.h  logical_operators.h  n_ary_operators.h  operators.h  reduction_operators.h  relational_operators.h  storage.h  threx.h  unary_operators.h
include/minlin/modules/threx/detail/: assignment.h  binary_expressions.h  binary_functors.h  expression_types.h  function_functors.h  gemv.h  indexing_expressions.h  indexing_functors.h  inplace.h  logical_expressions.h  logical_functors.h  n_ary_expressions.h  n_ary_functors.h  relational_expressions.h  relational_functors.h  storage.h  unary_expressions.h  unary_functors.h  vector_properties.h
include/petscvector/: PetscVector.h  PetscVectorWrapperComb.h  PetscVectorWrapperSub.h  petscvector.h  petscvector_impl.h
include/qpopt/: cg.h  mprgp.h  qpopt.h
include/qpopt_old/: mprgp.h  qpopt.h  settings.h  smalbe.h
qpopt/: makefile  qpopt.cpp
qpopt/include/: qpopt.h
test_matmult/: test_matmult.cu
tests/: CMakeLists.txt  test.cu  test_blockmatmult.cu  test_matmult.cu  test_memory.cu  test_sort.cu  test_transfer.cu
tests_cg/: CMakeLists.txt  cg.h  test_laplace.cu
tests_petsc/: CMakeLists.txt  test_matmult.cu
